Initial changes as per migration guide

--- a/cob_gazebo_plugins/CMakeLists.txt
+++ b/cob_gazebo_plugins/CMakeLists.txt
@@ -1,4 +1,8 @@
 cmake_minimum_required(VERSION 3.0.2)
+set(CMAKE_CXX_STANDARD 14)
 project(cob_gazebo_plugins)
-find_package(catkin REQUIRED)
-catkin_metapackage()
+find_package(cob_gazebo_ros_control REQUIRED)
+find_package(ament_cmake REQUIRED)
+ament_target_dependencies(cob_gazebo_ros_control)
+
+ament_package()
