--- a/cob_gazebo_plugins/package.xml
+++ b/cob_gazebo_plugins/package.xml
@@ -10,11 +10,12 @@
 
   <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+  <exec_depend>rosidl_default_generators</exec_depend>
 
-  <exec_depend>cob_gazebo_ros_control</exec_depend>
+  <depend>cob_gazebo_ros_control</depend>
 
   <export>
-    <metapackage/>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
